// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanDB 1`] = `"DELETE FROM trades WHERE timestamp < UNIX_TIMESTAMP(DATE_SUB(NOW(), INTERVAL 7 DAY)) * 1000"`;

exports[`constructor 1`] = `
Array [
  Array [
    Object {
      "database": "priceFeedDB",
      "host": "host",
      "password": "pwd",
      "user": "user",
    },
  ],
]
`;

exports[`executeQuery error 1`] = `"test"`;

exports[`executeQuery error ER_DUP_ENTRY 1`] = `
Object {
  "code": "ER_DUP_ENTRY",
}
`;

exports[`init 1`] = `
Array [
  Array [
    "error",
    [Function],
  ],
]
`;

exports[`insertPrice 1`] = `"INSERT INTO historical_price VALUES ('1234567890','123','456','ETH|USD')"`;

exports[`insertTradeData 1`] = `
Array [
  Array [
    "REPLACE trades VALUES ('src','id','123','456','1234567890','1234567890','quote|base')",
  ],
  Array [
    "REPLACE trades VALUES ('src','id','123','456','1234567890','1234567890','quote|base')",
  ],
]
`;

exports[`insertTradeData 2`] = `
Array [
  Array [
    Object {
      "amount": 456,
      "base": "base",
      "id": "id",
      "price": 123,
      "quote": "quote",
      "source": "src",
      "timestamp": 1234567890,
    },
    1234567890,
  ],
]
`;

exports[`readLastPrice 1`] = `
Object {
  "base": "USD",
  "price": 0,
  "quote": "ETH",
  "source": "",
  "timestamp": 0,
  "volume": 0,
}
`;

exports[`readLastPrice 2`] = `
Object {
  "base": "USD",
  "price": 123,
  "quote": "ETH",
  "source": "",
  "timestamp": 1234567890,
  "volume": 456,
}
`;

exports[`readLastPrice 3`] = `
Array [
  Array [
    "SELECT * FROM historical_price WHERE pair='ETH|USD' ORDER BY timestamp DESC LIMIT 1;",
  ],
]
`;

exports[`readSourceData 1`] = `"SELECT * FROM trades WHERE timestamp >= 1230967890 AND timestamp <= 1234567890 AND pair = 'ETH|USD';"`;

exports[`readSourceData 2`] = `
Array [
  Object {
    "amount": 456,
    "base": undefined,
    "id": "id1",
    "price": 123,
    "quote": undefined,
    "source": "src1",
    "timestamp": 1234567890,
  },
  Object {
    "amount": 567,
    "base": undefined,
    "id": "id2",
    "price": 234,
    "quote": undefined,
    "source": "src2",
    "timestamp": 2345678901,
  },
]
`;
